# CS100

./: .gitignore  README.md  hellowrold.c  test cyh.c
chapter8/: checking.c
chapter9/hotel/: hotel.c  hotel.h  usehotel.c
cs100/hw1/: question2.c
cs100/hw3/: question1.c  question2.c
cs100/hw4/question1/: question1  question1.c  question1_def.h
cs100/hw4/question3/: pacman.c
cs100/hw5/: question4.cpp
cs100/hw6/: solution.cpp
cs100/hw7/7-1/: rational.cpp
cs100/hw7/7-2/: CMakeLists.txt  matrix.hpp  rational.hpp
cs100/hw7/7-3/: generate.py  visualize.py
cs100/hw8/src/: poly.hpp
homework/hw1/: homework1_code_from_your_friend.c  question2.c  question3.c
homework/hw2/: question1.c  question2.c  question3.c
homework/hw3/: question1_.c
homework/hw4/question1/: question1_def.c
homework/hw4/question2/: list.c
homework/hw4/question3/: pacman.c
homework/hw5/: question1.cpp  question2.cpp  question3.cpp
homework/hw7/7-1/: CMakeLists.txt  rational.hpp
homework/hw7/7-2/: rational.cpp
homework/hw7/7-3/: CMakeLists.txt  kmeans.cpp  kmeans.hpp  main.cpp
homework/hw8/src/: functional_forms.hpp  newton.hpp
recitation/: question1.c  question2.c
